testData/inspections/go-defer-function-call/parens.go
package main

func _() {
    defer <error descr="Expression in defer must be function call">(f<caret>unc(){})</error>
}